added more visualization metrics

--- a/CIS_111_6_weekly_report.ipynb
+++ b/CIS_111_6_weekly_report.ipynb
@@ -55,6 +55,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "y\n",
+            "no     36548\n",
+            "yes     4640\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "target_count = df['y'].value_counts()\n",
+        "print(target_count)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 5,
       "metadata": {
         "id": "F8hoEsYbCHKG"
@@ -602,6 +623,296 @@
         "results_df_sorted = results_df.sort_values(by=\"BusinessValue\", ascending=False)\n",
         "print(\"\\nSorted by Business Value:\")\n",
         "print(results_df_sorted.reset_index(drop=True))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Model</th>\n",
+              "      <th>Accuracy</th>\n",
+              "      <th>Precision</th>\n",
+              "      <th>Recall</th>\n",
+              "      <th>F1</th>\n",
+              "      <th>BalancedAcc</th>\n",
+              "      <th>BusinessValue</th>\n",
+              "      <th>Threshold</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>RandomForest (SMOTE_Tomek)</td>\n",
+              "      <td>0.116938</td>\n",
+              "      <td>0.113134</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.203271</td>\n",
+              "      <td>0.502417</td>\n",
+              "      <td>84640</td>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>RandomForest (Under)</td>\n",
+              "      <td>0.138869</td>\n",
+              "      <td>0.115234</td>\n",
+              "      <td>0.994971</td>\n",
+              "      <td>0.206547</td>\n",
+              "      <td>0.512579</td>\n",
+              "      <td>84630</td>\n",
+              "      <td>0.17</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>RandomForest (SMOTE_ENN)</td>\n",
+              "      <td>0.157482</td>\n",
+              "      <td>0.117093</td>\n",
+              "      <td>0.990661</td>\n",
+              "      <td>0.209431</td>\n",
+              "      <td>0.521185</td>\n",
+              "      <td>84610</td>\n",
+              "      <td>0.03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>RandomForest (Over)</td>\n",
+              "      <td>0.115643</td>\n",
+              "      <td>0.112987</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.203034</td>\n",
+              "      <td>0.501687</td>\n",
+              "      <td>84560</td>\n",
+              "      <td>0.02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>RandomForest (SMOTE)</td>\n",
+              "      <td>0.115238</td>\n",
+              "      <td>0.112941</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202960</td>\n",
+              "      <td>0.501459</td>\n",
+              "      <td>84535</td>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>GradientBoosting (Under)</td>\n",
+              "      <td>0.113701</td>\n",
+              "      <td>0.112767</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202679</td>\n",
+              "      <td>0.500593</td>\n",
+              "      <td>84440</td>\n",
+              "      <td>0.08</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>RandomForest (Original)</td>\n",
+              "      <td>0.132395</td>\n",
+              "      <td>0.114536</td>\n",
+              "      <td>0.995690</td>\n",
+              "      <td>0.205440</td>\n",
+              "      <td>0.509245</td>\n",
+              "      <td>84425</td>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>DecisionTree (Original)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>DecisionTree (SMOTE)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>GradientBoosting (Original)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>DecisionTree (SMOTE_Tomek)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>GradientBoosting (SMOTE_ENN)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>DecisionTree (SMOTE_ENN)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>GradientBoosting (SMOTE)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>DecisionTree (Over)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>GradientBoosting (SMOTE_Tomek)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>DecisionTree (Under)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>GradientBoosting (Over)</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>0.112649</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.202487</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>84375</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                             Model  Accuracy  Precision    Recall        F1  \\\n",
+              "0       RandomForest (SMOTE_Tomek)  0.116938   0.113134  1.000000  0.203271   \n",
+              "1             RandomForest (Under)  0.138869   0.115234  0.994971  0.206547   \n",
+              "2         RandomForest (SMOTE_ENN)  0.157482   0.117093  0.990661  0.209431   \n",
+              "3              RandomForest (Over)  0.115643   0.112987  1.000000  0.203034   \n",
+              "4             RandomForest (SMOTE)  0.115238   0.112941  1.000000  0.202960   \n",
+              "5         GradientBoosting (Under)  0.113701   0.112767  1.000000  0.202679   \n",
+              "6          RandomForest (Original)  0.132395   0.114536  0.995690  0.205440   \n",
+              "7          DecisionTree (Original)  0.112649   0.112649  1.000000  0.202487   \n",
+              "8             DecisionTree (SMOTE)  0.112649   0.112649  1.000000  0.202487   \n",
+              "9      GradientBoosting (Original)  0.112649   0.112649  1.000000  0.202487   \n",
+              "10      DecisionTree (SMOTE_Tomek)  0.112649   0.112649  1.000000  0.202487   \n",
+              "11    GradientBoosting (SMOTE_ENN)  0.112649   0.112649  1.000000  0.202487   \n",
+              "12        DecisionTree (SMOTE_ENN)  0.112649   0.112649  1.000000  0.202487   \n",
+              "13        GradientBoosting (SMOTE)  0.112649   0.112649  1.000000  0.202487   \n",
+              "14             DecisionTree (Over)  0.112649   0.112649  1.000000  0.202487   \n",
+              "15  GradientBoosting (SMOTE_Tomek)  0.112649   0.112649  1.000000  0.202487   \n",
+              "16            DecisionTree (Under)  0.112649   0.112649  1.000000  0.202487   \n",
+              "17         GradientBoosting (Over)  0.112649   0.112649  1.000000  0.202487   \n",
+              "\n",
+              "    BalancedAcc  BusinessValue  Threshold  \n",
+              "0      0.502417          84640       0.01  \n",
+              "1      0.512579          84630       0.17  \n",
+              "2      0.521185          84610       0.03  \n",
+              "3      0.501687          84560       0.02  \n",
+              "4      0.501459          84535       0.01  \n",
+              "5      0.500593          84440       0.08  \n",
+              "6      0.509245          84425       0.01  \n",
+              "7      0.500000          84375       0.00  \n",
+              "8      0.500000          84375       0.00  \n",
+              "9      0.500000          84375       0.00  \n",
+              "10     0.500000          84375       0.00  \n",
+              "11     0.500000          84375       0.00  \n",
+              "12     0.500000          84375       0.00  \n",
+              "13     0.500000          84375       0.00  \n",
+              "14     0.500000          84375       0.00  \n",
+              "15     0.500000          84375       0.00  \n",
+              "16     0.500000          84375       0.00  \n",
+              "17     0.500000          84375       0.00  "
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "results_df_sorted.reset_index(drop=True)"
       ]
     }
   ],
